fix: ajusta propriedades e dependencias para controlador de prestador e cliente funcionar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,19 @@ spring.application.name=homey
 
 # spring.profiles.active=dev,out
 
-spring.datasource.h2.jdbc-url=jdbc:h2:file:./data/testdb
-spring.datasource.h2.driverClassName=org.h2.Driver
-spring.datasource.h2.username=sa
-spring.datasource.h2.password=
+spring.datasource.url=jdbc:h2:file:./data/testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
 
 springdoc.api-docs.version=OPENAPI_3_0
